--- a/estate_nursery/views/estate_nursery_recovery.xml
+++ b/estate_nursery/views/estate_nursery_recovery.xml
@@ -7,10 +7,9 @@
                 <tree string="Nursery Recovery Tree View">
                     <field name="recovery_code" string="Recovery ID"/>
                     <field name="recovery_date"/>
-                    <!--<field name="qty_plantedbatch" string="Quantity Planted"/>-->
-                    <field name="qty_recovery" string="Quantity Double"/>
-                    <field name="qty_normal" string="Quantity Normal"/>
-                    <field name="qty_abnormal" string="Quantity Abnormal"/>
+                    <field name="qty_recovery" string="QTY Selection Abnormal"/>
+                    <field name="qty_normal" string="QTY Recovery Normal"/>
+                    <field name="qty_abnormal" string="QTY Recovery Abnormal"/>
                     <field name="qty_total" string="&#931;  Saldo Total."/>
                 </tree>
             </field>
@@ -71,12 +70,8 @@
 
                         <group>
                             <group>
-                                <field name="selection_many2many"  widget="many2many_tags"  options="{'no_create_edit': True}" string="Selection"/>
-                                <field name="recovery_date" string="Recovery Date" attrs="{'readonly': [('state','=','done')]}"/>
-                                <field name="qty_plante" string="Quantity Last planted" invisible="0" readonly="1"/>
-                                <field name="qty_recovery" readonly="1" string="Quantity Recovery " invisible="0">{‘readonly_by_pass’: True}</field>
-                                <field name="qty_normal" string="Quantity Normal" />
-                                <field name="qty_abnormal" string="Quantity Abnormal " invisible="0"/>
+                                <field name="selection_many2many"  required="1" widget="many2many_tags"  options="{'no_create_edit': True}" string="Selection"/>
+                                <field name="recovery_date" string="Recovery Date" required="1" attrs="{'readonly': [('state','=','done')]}"/>
                             </group>
 
                             <group coolspan="10">
@@ -84,6 +79,17 @@
                                         attrs="{'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
                                 <field name="qty_total" string="Quantity Total" attrs="{'required': [('state','=','draft')],
                                  'readonly': [('state','!=','draft')]}"/>
+                            </group>
+
+                        </group>
+                        <group attrs="{'invisible': [('state','!=','done')]}" string="Detail Information">
+                            <group>
+                                <field name="qty_plante" string="Quantity Last planted" invisible="0" readonly="1"/>
+                                <field name="qty_recovery" readonly="1" string="Quantity Recovery " invisible="0">{‘readonly_by_pass’: True}</field>
+                            </group>
+                            <group>
+                                <field name="qty_normal" readonly="1" string="Quantity Normal">{‘readonly_by_pass’: True}</field>
+                                <field name="qty_abnormal" string="Quantity Abnormal " invisible="0"/>
                             </group>
                         </group>
                             <notebook>
@@ -105,7 +111,8 @@
             <field name="arch" type="xml">
                 <tree string="Nursery Recovery Line Tree View" editable="bottom">
                     <field name="recovery_seed_id" invisible="1"/>
-                    <field name="qty_abnormal" string="Qty Abnormal"/>
+                    <field name="qty_normal" string="Qty Normal"/>
+                    <field name="qty_abnormal" string="Qty Abnormal" readonly="1">{‘readonly_by_pass’: True}</field>
                     <field name="location_type" string="Location From" readonly="1"/>
                     <field name="location_id" string="Location To" />
                 </tree>
