--- a/estate_nursery/views/estate_nursery_recovery.xml
+++ b/estate_nursery/views/estate_nursery_recovery.xml
@@ -92,6 +92,7 @@
                                 <field name="qty_abnormal" string="Quantity Abnormal " invisible="0"/>
                             </group>
                         </group>
+                        <group>
                             <notebook>
                                     <page string="Cleaving Line">
                                         <tree>
@@ -100,6 +101,11 @@
                                         </tree>
                                      </page>
                             </notebook>
+                        </group>
+                        <div class="oe_chatter">
+                            <field name="message_follower_ids" widget="mail_followers"/>
+                            <field name="message_ids" widget="mail_thread" options='{"thread_level": 1}'/>
+                        </div>
                     </sheet>
                 </form>
             </field>
