--- a/estate_nursery/views/estate_nursery_selection_view.xml
+++ b/estate_nursery/views/estate_nursery_selection_view.xml
@@ -277,7 +277,7 @@
                                 <field name="stage_id" invisible="1"/>
                                 <field name="qty_batch" attrs="{'required': [('state','=','draft')]}" readonly="1"/>
                                 <field name="qty_plante" string="Quantity Planted Batch"
-                                       attrs="{'invisible': [('state','!=','done')]}" readonly="1" >
+                                       attrs="{'invisible': [('state','!=','done')]}" readonly="1">
                                     {‘readonly_by_pass’: True}
                                 </field>
                                 <field name="qty_plant" string="Result Quantity Planted"
@@ -307,7 +307,7 @@
                             <notebook>
                                 <page string="Abnormal Information">
                                         <tree>
-                                            <field name="selectionline_ids" attrs="{'required': [('state','=','draft')],
+                                            <field name="selectionline_ids" track_visibility="onchange" attrs="{'required': [('state','=','draft')],
                                                 'readonly': [('state','=','done')]}"
                                                    context="{'tree_view_ref' : 'estate_nursery.view_tree_selectionline'}"/>
                                         </tree>
@@ -391,8 +391,8 @@
             <field name="model">estate.nursery.selectionline</field>
             <field name="arch" type="xml">
                 <tree string="Seed Selection Line" colors="red:qty" editable="bottom">
-                    <field name="cause_id" options="{'no_create_edit': True}"/>
-                    <field name="qty" string="&#931; Quantity Abnormal ." sum="Qty" />
+                    <field name="cause_id" options="{'no_create_edit': True}" track_visibility="onchange"/>
+                    <field name="qty" string="&#931; Quantity Abnormal ." sum="Qty" track_visibility="onchange"/>
                     <field name="location_id" options="{'no_create_edit': True}"/>
                     <field name="comment" string="Add Description/Comment"/>
                 </tree>
