--- a/estate_nursery/views/estate_planting_view.xml
+++ b/estate_nursery/views/estate_planting_view.xml
@@ -83,7 +83,7 @@
                                 <field name="seed_location_id"
                                        string="Seed Location" required="True" options="{'no_create_edit': True}"/>
                                 <field name="date_request"/>
-                                <!--<field name="lot_id" options="{'no_create_edit': True}"/>-->
+                                <field name="lot_id" options="{'no_create_edit': True}"/>
                             </group>
 
                             <group coolspan="10">
