--- a/estate_nursery/views/estate_nursery_view.xml
+++ b/estate_nursery/views/estate_nursery_view.xml
@@ -267,7 +267,7 @@
 
                             <page string="Selection" attrs="{'readonly' : [('selection_count', '>', 6)]}">
                                 <field name="selection_ids"  string="Create Selection" attrs="{
-                                'required' : [('state', '=', 'draft')],'readonly' : [('selection_count', '=', 6)]}"
+                                'required' : [('state', '=', 'draft')],'readonly' : [('selection_count', '>', 6)]}"
                                        context="{'tree_view_ref' : 'estate_nursery.view_tree_selection_nursery',
                                        'default_qty_plante': qty_planted}"/>
                             </page>
