--- a/estate_nursery/views/estate_nursery_recovery.xml
+++ b/estate_nursery/views/estate_nursery_recovery.xml
@@ -120,7 +120,7 @@
                     <field name="qty_normal" string="Qty Normal"/>
                     <field name="qty_abnormal" string="Qty Abnormal" readonly="1">{‘readonly_by_pass’: True}</field>
                     <field name="location_type" string="Location From" readonly="1"/>
-                    <field name="location_id" string="Location To" />
+                    <field name="location_id" string="Location To" options="{'no_create_edit': True}"/>
                 </tree>
             </field>
         </record>
