--- a/estate_nursery/views/estate_nursery_selection_view.xml
+++ b/estate_nursery/views/estate_nursery_selection_view.xml
@@ -391,8 +391,8 @@
             <field name="model">estate.nursery.selectionline</field>
             <field name="arch" type="xml">
                 <tree string="Seed Selection Line" colors="red:qty" editable="bottom">
-                    <field name="cause_id" options="{'no_create_edit': True}" track_visibility="onchange"/>
-                    <field name="qty" string="&#931; Quantity Abnormal ." sum="Qty" track_visibility="onchange"/>
+                    <field name="cause_id" options="{'no_create_edit': True}" />
+                    <field name="qty" string="&#931; Quantity Abnormal ." sum="Qty"/>
                     <field name="location_id" options="{'no_create_edit': True}"/>
                     <field name="comment" string="Add Description/Comment"/>
                 </tree>
