--- a/estate_nursery/views/estate_nursery_recovery.xml
+++ b/estate_nursery/views/estate_nursery_recovery.xml
@@ -1,5 +1,20 @@
 <openerp>
     <data>
+
+         <!--Search , Recovery-->
+        <record id="view_search_selection" model ="ir.ui.view">
+            <field name="name">Recovery Search</field>
+            <field name="model">estate.nursery.recovery</field>
+            <field name="arch" type="xml">
+                  <search string="Recovery">
+                      <group string="Group By">
+                          <filter name="by_Date" string="Date Recovery"
+                              icon="terp-partner" context="{'group_by':'recovery_date'}"/>
+                      </group>
+                  </search>
+            </field>
+        </record>
+
          <record model="ir.ui.view" id="view_tree_recovery_seed">
             <field name="name">Recovery Seed Tree</field>
             <field name="model">estate.nursery.recovery</field>
@@ -130,6 +145,7 @@
             <field name="name">Recovery</field>
             <field name="res_model">estate.nursery.recovery</field>
             <field name="view_mode">tree,form</field>
+            <field name="context">{'search_default_by_Date': 1}</field>
             <field name="view_search_recovery" ref="estate_nursery.view_form_recovery_nursery"/>
         </record>
 
