--- a/estate_planning/views/estate_planning_view.xml
+++ b/estate_planning/views/estate_planning_view.xml
@@ -214,7 +214,8 @@
             <field name="name">Activities</field>
             <field name="res_model">estate.activity</field>
             <field name="view_mode">tree,form</field>
-            <field name="context">{'activity_category_id': active_id, 'search_default_filter_category': active_id}</field>
+            <field name="context">{'activity_category_id': active_id,
+                'search_default_filter_category': active_id}</field>
         </record>
 
         <record id="ir_activity_category_open" model="ir.values">
