--- a/estate_nursery/views/estate_planting_view.xml
+++ b/estate_nursery/views/estate_planting_view.xml
@@ -157,8 +157,8 @@
                     <field name="total_qty_pokok"/>
                     <field name="from_location_id"  widget="many2many_tags" options="{'no_create_edit': True}"/>
                     <field name="batch_id" widget="many2many_tags" options="{'no_create_edit': True}"/>
-                    <field name="qty_difference"/>
-                    <field name="qty_result"/>
+                    <!--<field name="qty_difference"/>-->
+                    <!--<field name="qty_result"/>-->
                 </tree>
             </field>
         </record>
