--- a/estate_nursery/views/estate_nursery_recovery.xml
+++ b/estate_nursery/views/estate_nursery_recovery.xml
@@ -85,7 +85,7 @@
 
                         <group>
                             <group>
-                                <field name="selection_many2many"  required="1" widget="many2many_tags"  options="{'no_create_edit': True}" string="Selection"/>
+                                <field name="selection_id"  required="1" options="{'no_create_edit': True}" string="Selection"/>
                                 <field name="recovery_date" string="Recovery Date" required="1" attrs="{'readonly': [('state','=','done')]}"/>
                             </group>
 
